--- a/RMS/src/main/resources/templates/addTables.html
+++ b/RMS/src/main/resources/templates/addTables.html
@@ -69,9 +69,9 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-									<h4 style="padding-bottom: 5px; font-family: cursive;"
+									<!-- <h4 style="padding-bottom: 5px; font-family: cursive;"
 										th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|"
-										th:text="${msg}"></h4>
+										th:text="${msg}"></h4> -->
 								</div>
 								<form th:action="@{addTables}" th:object="${Tables}" method="POST">
 									<div class="form-group">
