--- a/RMS/src/main/resources/templates/changePassword.html
+++ b/RMS/src/main/resources/templates/changePassword.html
@@ -51,7 +51,7 @@ body {
 }
 
 #bg-img {
-	background-image: url("/rms/adminlogin.jpg");
+	background-image: url("/rms/changepassword.jpg");
 	height: 100vh;
 	width: 100%;
 	background-repeat: no-repeat;
@@ -66,7 +66,7 @@ body {
 		<div class="row">
 			<div class="col-md-6" id="bg-img"></div>
 			<div class="col-md-6 mt-5">
-				<h1 style="font-family: cursive; font-size: xx-large; color: #007bff;" class="text-center" >Admin</h1>
+				<h1 style="font-family: cursive; font-size: xx-large; color: #007bff;" class="text-center" >Change Password</h1>
 					<div class="row">
 					<div class="col-md-6 offset-md-3">
 				<div class="card border-0">
@@ -76,26 +76,27 @@ body {
 						<!--	<h4 style="color: red; padding-bottom: 5px; font-family: cursive"
 								th:text="${msg}"></h4>-->
 						</div>
-						<form th:action="@{login}" th:object="${Admin}" method="POST">
+						<form th:action="@{changepassword}" th:object="${ChangePassword}" method="POST">
 							<div class="form-group">
+							<input type="hidden" name="waiterid" th:value="${waiterid}">
 								<span
-									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Username</span>
+									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Current Password</span>
 								<input
 									style="font-family: cursive; color: black; font-size: 120%;"
-									type="text" required="required"
+									type="password" required="required"
 									class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
-									id="username" aria-describedby="emailHelp" name="username"
+									id="currentpassword" aria-describedby="emailHelp" name="currentpassword"
 									autofocus>
 							</div>
 							<br>
 							<div class="form-group">
 
 								<span
-									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Password</span>
+									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">New Password</span>
 								<input required="required" type="password"
 									style="font-family: cursive; color: black; font-size: 120%;"
 									class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
-									id="password" name="password" /> <br>
+									id="newpassword" name="newpassword" /> <br>
 							</div>
 							<br>
 							<center>
