--- a/RMS/src/main/resources/templates/customerRegistration.html
+++ b/RMS/src/main/resources/templates/customerRegistration.html
@@ -70,7 +70,7 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-									<h4 style="color: red;padding-bottom:5px;font-family: cursive;" th:text="${msg}"></h4>
+								<!--	<h4 style="color: red;padding-bottom:5px;font-family: cursive;" th:text="${msg}"></h4>-->
 								</div>
 								<form th:action="@{register}" th:object="${customer}" method="POST">
 								<div class="form-group">
