--- a/RMS/src/main/resources/templates/reserveTable.html
+++ b/RMS/src/main/resources/templates/reserveTable.html
@@ -76,7 +76,7 @@ body {
 
 								<div class="container">
 									<!--  	<h3 class="text-center" style="color: red;">{{message}}</h3> -->
-									<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>
+								<!--  	<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>-->
 								</div>
 								<form th:action="@{reserve}" th:object="${Customer}"
 									method="POST">
