--- a/RMS/src/main/resources/templates/waiterRegistration.html
+++ b/RMS/src/main/resources/templates/waiterRegistration.html
@@ -70,7 +70,7 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-								<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>
+							<!--	<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>-->
 								</div>
 								<form th:action="@{register}" th:object="${waiter}" method="POST">
 								<div class="form-group">
