--- a/RMS/src/main/resources/templates/waiterLogin.html
+++ b/RMS/src/main/resources/templates/waiterLogin.html
@@ -71,7 +71,7 @@ body {
 
 								<div class="container">
 									<!--  	<h3 class="text-center" style="color: red;">{{message}}</h3> -->
-									<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>
+								<!--	<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>-->
 								</div>
 								<form th:action="@{login}" th:object="${Waiter}" method="POST">
 									<div class="form-group">
