--- a/RMS/src/main/resources/templates/reserveTable.html
+++ b/RMS/src/main/resources/templates/reserveTable.html
@@ -106,10 +106,10 @@ body {
 									<div class="form-group">
 
 										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">To Date</span> <input
-											required="required" type="time"
+											required="required" type="datetime-local"
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0"
 											style="font-family: cursive;font-size: x-large;color: black;font-size:100%;"
-											id="to_date_convert" name="to_date_convert" max="24" /> 
+											id="to_date" name="to_date"  /> 
 									</div>
 									<br>
 									<center>
