--- a/RMS/src/main/resources/templates/split.html
+++ b/RMS/src/main/resources/templates/split.html
@@ -1,10 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	crossorigin="anonymous"></script>
+
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Login Here</title>
+<style>
+.card {
+	/* 	border-radius: 50px 20px; */
+	padding: 10px;
+	/* border: 2px solid blue; */
+}
+
+.form-control {
+	border-radius: 0px;
+}
+
+.form-control:hover {
+	border-radius: 5px;
+}
+
+.bg-img {
+	background-image:
+		url('https://www.dotcom-monitor.com/blog/wp-content/uploads/sites/3/2019/09/authentication_authorization.jpg');
+	height: 100vh;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+body {
+	overflow: hidden;
+}
+</style>
 </head>
 <body>
+	<div th:insert="navbar :: navbar"></div>
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="col-md-6 mt-3">
 
+			<div class="container-fluid">
+
+				<div class="text-center">
+
+					<h1
+						style="color: #007bff; font-family: cursive; font-size: xx-large;">Split Bill</h1>
+				</div>
+				<div class="row">
+					<div class="col-md-7 offset-md-3">
+						<div class="card border-0 m-0 p-0">
+							<div class="card-body">
+
+								<div class="container">
+									<!--  	<h3 class="text-center" style="color: red;">{{message}}</h3> -->
+								<!--	<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>-->
+								</div>
+								<form th:action="@{split}" th:object="${split}" method="POST">
+								<div th:each="i : ${#numbers.sequence( 1, splitnumber)}">
+
+
+									<div class="form-group">
+										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;" >Spit  <span th:text="${i}"></span> </span> <input type="number" required="required"
+											class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1px"
+											style="font-family: cursive;color: black;font-size:120%;" id="${splitname}${i}" aria-describedby="emailHelp" name=${splitname}${i}
+											autofocus>
+									</div>
+									</div>
+									<br>
+
+									<center>
+										<button type="submit" class="btn btn-primary btn-block">
+											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">&nbsp;&nbsp;&nbsp;Next&nbsp;&nbsp;&nbsp;</h4>
+										</button>
+									</center>
+									<br>
+
+
+
+								</form>
+							<!-- 	<hr style="height: 10px;">
+								<center>
+									<a href="register" class="btn btn-success ">
+										<h4>&nbsp;&nbsp;Create New Account&nbsp;&nbsp;</h4>
+									</a> 
+
+								</center>  -->
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 </body>
 </html>
