--- a/RMS/src/main/resources/templates/item.html
+++ b/RMS/src/main/resources/templates/item.html
@@ -116,7 +116,7 @@ body {
 
 									<span
 										style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Price</span>
-									<input style="font-family: cursive;font-size: x-large;color: black;font-size:120%;" required="required" type="number" step="any"
+									<input style="font-family: cursive;font-size: x-large;color: black;font-size:120%;" required="required" type="number" step="0.01"
 										class="form-control mt-2 border-left-0 border-top-0 border-right-0"
 										id="price" name="price" /> <br>
 								</div>
