--- a/RMS/src/main/resources/templates/payment.html
+++ b/RMS/src/main/resources/templates/payment.html
@@ -70,9 +70,16 @@ a {
 					<h2 style="color: #007bff; margin-top: 15px; text-align: center;">Payment
 					</h2>
 					<br>
-					<form th:action="@{payment}" th:object="${Payment}"
-						method="Post">
-						
+
+						<div class="form-group">
+							<span
+								style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Amount</span>
+							<input type="number" readonly="readonly" required="required"
+								class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1px"
+								style="font-family: cursive; color: black; font-size: 120%;"
+								id="amout"  name="amout" th:value="${amout}"
+								autofocus>
+						</div>
 						<div class="form-group">
 							<span
 								style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Card Number</span>
@@ -112,12 +119,12 @@ a {
 						<br>
 						<div class="mt-3">
 							<center>
-										<button type="submit" class="btn btn-primary">
+							<a th:href="@{split1?splitmap={splitmap}(splitmap=${splitmap})}">
+										<button type="button" class="btn btn-primary">
 											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">Pay</h4>
-										</button>
+										</button></a>
 									</center>
 						</div>
-					</form>
 				</div>
 			</div>
 		</div>
