--- a/RMS/src/main/resources/templates/selectsplit.html
+++ b/RMS/src/main/resources/templates/selectsplit.html
@@ -96,7 +96,7 @@ body {
 									<center>
 										<button type="submit" class="btn btn-primary btn-block">
 											<h4
-												style="font-family: cursive; font-size: x-large; color: white; font-size: 170%;">&nbsp;&nbsp;&nbsp;order&nbsp;&nbsp;&nbsp;</h4>
+												style="font-family: cursive; font-size: x-large; color: white; font-size: 170%;">&nbsp;&nbsp;&nbsp;Next&nbsp;&nbsp;&nbsp;</h4>
 										</button>
 										
 									</center>
