--- a/RMS/src/main/resources/templates/adminLogin.html
+++ b/RMS/src/main/resources/templates/adminLogin.html
@@ -73,8 +73,8 @@ body {
 					<div class="card-body">
 
 						<div class="container">
-						<!--	<h4 style="color: red; padding-bottom: 5px; font-family: cursive"
-								th:text="${msg}"></h4>-->
+							<h4 style="color: red; padding-bottom: 5px; font-family: cursive"
+								th:text="${msg}"></h4>
 						</div>
 						<form th:action="@{login}" th:object="${Admin}" method="POST">
 							<div class="form-group">
