--- a/RMS/src/main/resources/templates/selectsplit.html
+++ b/RMS/src/main/resources/templates/selectsplit.html
@@ -71,9 +71,9 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-								<!--  	<h4
+							 	<h4
 										style="color: green; padding-bottom: 5px; font-family: cursive"
-										th:text="${msg}"></h4> -->
+										th:text="${msg}"></h4> 
 								<form th:action="@{paymentsplit}" th:object="${Spliting}"
 									method="Post">
 								</div>
