--- a/RMS/src/main/resources/templates/item.html
+++ b/RMS/src/main/resources/templates/item.html
@@ -100,9 +100,9 @@ body {
 						<div class="card-body">
 
 							<div class="container">
-								<!--  <h4 style="padding-bottom: 5px; font-family: cursive;"
+								 <h4 style="padding-bottom: 5px; font-family: cursive;"
 									th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|"
-									th:text="${msg}"></h4>-->
+									th:text="${msg}"></h4>
 							</div>
 							<form th:action="@{menu}" th:object="${Item}" method="POST">
 								<div class="form-group">
