--- a/RMS/src/main/resources/templates/orders.html
+++ b/RMS/src/main/resources/templates/orders.html
@@ -114,15 +114,15 @@ body {
 						th:text="${totalprice}" class="text-center"></span>
 				</h1>
 				<br>
-				<form th:action="@{payment}" method="Get">
+				<form th:action="@{finalpayment}" method="Get">
 				<input type="hidden" th:value="${totalprice}" name="totalprice">
 				<div class="form-inline">
-					<span
+					<!-- <span
 						style="font-family: cursive; font-size: x-large; color: black; font-size: 160%; margin-left: 55px">No
 						of Splits </span> <input required="required" type="number"
 						autofocus="autofocus" class="form-control "
 						style="font-family: cursive; color: black; font-size: 120%; margin-left: 30px"
-						id="split" name="split" max=5 /> 
+						id="split" name="split" max=5 /> -->
 					
 				</div>
 				<br> <br>
@@ -145,9 +145,9 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-								<!--  	<h4
+							 	<h4
 										style="color: green; padding-bottom: 5px; font-family: cursive"
-										th:text="${msg}"></h4> -->
+										th:text="${msg}"></h4> 
 								</div>
 								<form th:action="@{orderitem}" th:object="${orderItems}"
 									method="Get">
