--- a/RMS/src/main/resources/templates/payment.html
+++ b/RMS/src/main/resources/templates/payment.html
@@ -70,14 +70,14 @@ a {
 					<h2 style="color: #007bff; margin-top: 15px; text-align: center;">Payment
 					</h2>
 					<br>
-
+					<form th:action="@{finalpayment1}" th:object="${Payment}" method="Post">
 						<div class="form-group">
 							<span
 								style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Amount</span>
 							<input type="number" readonly="readonly" required="required"
 								class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1px"
 								style="font-family: cursive; color: black; font-size: 120%;"
-								id="amout"  name="amout" th:value="${amout}"
+								id="amount"  name="amount" th:value="${amount}"
 								autofocus>
 						</div>
 						<div class="form-group">
@@ -117,14 +117,15 @@ a {
 								autofocus>
 						</div>
 						<br>
-						<div class="mt-3">
-							<center>
-							<a th:href="@{split1?splitmap={splitmap}(splitmap=${splitmap})}">
-										<button type="button" class="btn btn-primary">
-											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">Pay</h4>
-										</button></a>
-									</center>
-						</div>
+						<center>
+					<button
+							type="submit" class="btn btn-primary ">
+							<h4
+								style="font-family: cursive; font-size: x-large; color: white; font-size: 170%;">&nbsp;&nbsp;&nbsp;Pay&nbsp;&nbsp;&nbsp;</h4>
+						</button>
+						</form>
+				</center>
+						
 				</div>
 			</div>
 		</div>
