--- a/RMS/src/main/resources/templates/split.html
+++ b/RMS/src/main/resources/templates/split.html
@@ -70,8 +70,8 @@ body {
 							<div class="card-body">
 
 								<div class="container">
-									<!--  	<h3 class="text-center" style="color: red;">{{message}}</h3> -->
-								<!--	<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>-->
+									  	<h3 class="text-center" style="color: red;">{{message}}</h3> 
+									<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>
 								</div>
 								<form th:action="@{split}" th:object="${split}" method="POST">
 								<div th:each="i : ${#numbers.sequence( 1, splitnumber)}">
